<resources>
    <string name="app_name">Daily WallPaper</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Update frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>3 hours</item>
        <item>6 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>180</item>
        <item>360</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="update_freq_list">upadate_freq_list</string>
    <string name="aboutLabel">Build number:\u00A0</string>
    <string name="aboutKey">updatebutton</string>
    <string name="OnBootCheckBoxName">Start update after reboot</string>
    <string name="onBootEnabledKey">onBootEnabled</string>
    <string name="action_settings">Settings</string>
    <string name="ShowImageTitle" />
    <string name="share_menuitem">Share</string>
    <string name="setwp_menuitem">Set as Wallpaper</string>
    <string name="AutomaticUpdateEnableCheckBoxName">Autoupdate Wallpaper</string>
    <string name="AutoUpdateEnabledKey">automaticUpdateEnabled</string>
    <string name="WelcomeScreenShowedKey">welcomeScreenShowed</string>
    <string name="WelcomeScreenContinueButton">Next</string>
    <string name="welcomeText">Wallpaper will be set automatically, every 6 hours</string>
    <string name="ImageContentDescription">Image</string>
    <string name="delete_menuitem">Delete</string>

</resources>
