<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="example_switch"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:title="@string/AutomaticUpdateEnableCheckBoxName"
        android:key="@string/AutoUpdateEnabledKey"
        android:summary="Enable Wallpaper updating in backgroud, without user interaction"
        android:defaultValue="true"
        />
    <ListPreference
        android:defaultValue="360"

        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="@string/update_freq_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"
        android:dependency="@string/AutoUpdateEnabledKey"/>

    <SwitchPreference
        android:title="@string/OnBootCheckBoxName"
        android:key="@string/onBootEnabledKey"
        android:defaultValue="true"
        android:dependency="@string/AutoUpdateEnabledKey"
        />


    <Preference  android:key="@string/aboutKey" android:title="@string/aboutLabel"/>



</PreferenceScreen>
